# add_cargo_library

./: README.md
add_cargo_library/: CMakeLists.txt  add_cargo_library-extras.cmake  package.xml
add_cargo_library/cmake/: add_cargo_library.cmake
example/: CMakeLists.txt  package.xml
example/mul_rs/: Cargo.toml  build.rs
example/mul_rs/src/: lib.rs
example/src/: test.cpp
