<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>add_cargo_library_example</name>
  <version>0.1.0</version>
  <description>Example usage of add_cargo_library</description>
  <maintainer email="maybe@tylerjw.dev">Tyler Weaver</maintainer>
  <license>BSD-3-Clause</license>
  <author email="maybe@tylerjw.dev">Tyler Weaver</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>add_cargo_library</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
